--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,12 @@
-env: CLANG_PATH_TO_LLVM_BUILD=$PWD/llvm-3.2
+env: LLVM_DIR=$PWD/llvm-3.2
 language: cpp
 compiler: clang
 before_install:
   - wget http://llvm.org/releases/3.2/llvm-3.2.src.tar.gz
   - tar xf llvm-3.2.src.tar.gz
-  - wget http://llvm.org/releases/3.2/clang-3.2.src.tar.gz
-  - tar xf clang-3.2.src.tar.gz
 install:
   - cd llvm-3.2.src
-  - ./configure --prefix=$CLANG_PATH_TO_LLVM_BUILD && make && sudo make install
-  - cd ../clang-3.2.src
-  - cmake -G "Unix Makefiles" && make && sudo make install
+  - ./configure --prefix=$LLVM_DIR && make && make install
 before_script:
   - cd ..
   - cmake -G "Unix Makefiles"
