--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: cpp
 compiler: clang
 before_install:
-  - add-apt-repository -y ppa:cmake/ppa
-  - apt-get update -q
-  - apt-get install -y cmake
+  - sudo add-apt-repository -y ppa:cmake/ppa
+  - sudo apt-get update -q
+  - sudo apt-get install -y cmake
   - wget http://llvm.org/releases/3.2/clang+llvm-3.2-x86_64-linux-ubuntu-12.04.tar.gz
   - tar xf clang+llvm-3.2-x86_64-linux-ubuntu-12.04.tar.gz
 before_script:
