--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: cpp
 compiler: clang
 before_install:
-  - sudo add-apt-repository -y ppa:cmake/ppa
-  - sudo apt-get update -q
+  - sudo add-apt-repository -y ppa:kalakris/cmake
+  - sudo apt-get update -qq
   - sudo apt-get install -y cmake
   - wget http://llvm.org/releases/3.2/clang+llvm-3.2-x86_64-linux-ubuntu-12.04.tar.gz
   - tar xf clang+llvm-3.2-x86_64-linux-ubuntu-12.04.tar.gz
